# nbis-project-admin

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc  README.md  environment.yaml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/nbis/: __init__.py  __main__.py  arguments.py  cli.py  config.py  decorators.py  env.py  exceptions.py  snakemake.py  templates.py  wrappers.py
src/nbis/cli/: webexport.py
src/nbis/commands/: __init__.py  add.py  config.py  diary.py  docs.py  init.py  smk.py  webexport.py
src/nbis/commands/configcmd/: __init__.py  init.py
src/nbis/commands/smkcmd/: __init__.py  add.py  init.py
src/nbis/resources/: nbis.css  nbis.scss
src/nbis/schemas/: config.schema.yaml  profile.schema.yaml
src/nbis/subcommands/: __init__.py  cli.py  config.py  diary.py  doc.py  docs.py  smk.py  webexport.py
src/nbis/templates/: .gitignore.j2  .markdownlint.yaml.j2  .pre-commit-config.yaml.j2  .pylintrc.j2  README.md.j2  config.py.j2  diary.md.j2  profile.yaml.j2  pyproject.toml.j2  running-slides.Rmd.j2  running-slides.qmd.j2  subcommand.py.j2  subcommand.smk.j2
src/nbis/templates/config/: config.yaml.j2
src/nbis/templates/config/local/: profile.yaml.j2
src/nbis/templates/docs/: _quarto.yml.j2  diary.md.j2  diary.qmd.j2  running-slides.Rmd.j2  running-slides.qmd.j2
src/nbis/templates/docs/assets/css/: nbis.scss
src/nbis/templates/docs/assets/www/: tikzfig.tex
src/nbis/templates/project/: README.md.j2  pyproject.toml.j2
src/nbis/templates/project/src/python_module/: cli.py.j2  config.py.j2
src/nbis/templates/project/src/python_module/commands/: admin.py.j2
src/nbis/templates/resources/: samples.tsv.j2
src/nbis/templates/schemas/: config.schema.yaml.j2  samples.schema.yaml.j2
src/nbis/templates/src/project/: config.py.j2
src/nbis/templates/src/project/commands/: command.smk.py.j2  group.smk.py.j2
src/nbis/templates/src/project/subcommands/: subcommand.py.j2  subcommand.smk.py.j2
src/nbis/templates/src/python_module/: __init__.py.j2  cli.py.j2  config.py.j2  env.py.j2
src/nbis/templates/src/python_module/commands/: admin.py.j2  command.group.py.j2  command.py.j2  command.smk.py.j2  command.standalone.py.j2  group.smk.py.j2  quarto.smk.py.j2  tools.py.j2
src/nbis/templates/src/python_module/core/: options.py.j2  snakemake.py.j2  wrappers.py.j2
src/nbis/templates/src/python_module/schemas/: config.schema.yaml.j2
src/nbis/templates/src/python_module/snakemake/: config.py.j2
src/nbis/templates/src/python_module/tools/: tool.py.j2
src/nbis/templates/src/python_module/workflow/schemas/: samples.schema.yaml.j2
src/nbis/templates/src/python_module/workflow/snakemake/commands/: command.smk.j2  quarto.smk.j2  test-config.smk.j2  test-setup.smk.j2  test.smk.j2
src/nbis/templates/src/snakemake/commands/: command.smk.j2  test.smk.j2
src/nbis/templates/src/snakemake/rules/: command.smk.j2  subcommand.smk.j2  test-config.smk.j2  test-setup.smk.j2  test.smk.j2
tests/: conftest.py  test_add.py  test_cli.py  test_commands.py  test_config.py  test_init.py  test_install.py  test_main.py  test_schema.py  test_smk.py  test_snakemake.py  test_subcommands.py  test_templates.py
