# see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/nbis/_version.py"

[project]
name = "nbis_project_admin"
authors = [
    {name = "Per Unneberg", email = "per.unneberg@scilifelab.se"},
]
description = "NBIS project admin"
readme = "README.md"
keywords = ["bioinformatics"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    'importlib-metadata; python_version>="3.7"',
    'click>=8.0',
    'jinja2',
    'jsonschema',
    'pypandoc',
    'ruamel.yaml',
    'toml'
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "nbis.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-data = { nbis = [
    "schemas/config.schema.yaml",
    "templates/*.j2",
    "resources/*"
]}


[project.scripts]
nbis-admin = "nbis.cli:cli"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --doctest-modules"
pythonpath = [
    "src"
]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310
isolated_build = true

[gh-actions]
python =
    3.10: py310

[testenv:test]
changedir = tests
deps =
    pytest
    pytest-coverage
    pytest-shutil
    pytest-git
    pytest-runner
    pip>=22.1.0
    wheel
commands =
    pytest --basetemp="{envtmpdir}" {posargs}

[testenv:project]
allowlist_externals =
    git
changedir = {envtmpdir}/project_foo
setenv =
    SKIP = lint
deps =
    build
    pre-commit
    pytest
    pytest-coverage
    pytest-shutil
    pytest-git
    pytest-runner
    pip>=22.1.0
    wheel
commands:
    nbis-admin init .
    git init -b main .
    git add -f .
    {envpython} -m pip install -e . --no-deps
    project_foo
    project_foo admin config init
    project_foo admin smk init
    project_foo admin smk add
    git add .
    pre-commit
    project_foo
    nbis-admin --version

"""

[tool.ruff]

exclude = []
