[project]
name = "nbis_project_admin"
authors = [
    {name = "Per Unneberg", email = "per.unneberg@scilifelab.se"},
]
description = "NBIS project admin"
readme = "README.md"
keywords = ["bioinformatics"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    'click>=8.0',
    "pypandoc>=1.15",
    "jinja2>=3.1.6",
    "toml>=0.10.2",
    "ruamel-yaml>=0.18.10",
    "jsonschema>=4.23.0",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
version-file = "src/nbis/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nbis"]

[project.scripts]
nbis-admin = "nbis.cli:cli"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --doctest-modules"
pythonpath = [
    "src"
]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py311,py312,py313
isolated_build = true

[gh-actions]
python =
    3.11: py311
    3.12: py312
    3.13: py313

[testenv:test]
changedir = tests
deps =
    pytest
    pytest-coverage
    pytest-shutil
    pytest-git
    pytest-runner
    pip>=22.1.0
    wheel
commands =
    pytest --basetemp="{envtmpdir}" {posargs}

[testenv:project]
allowlist_externals =
    git
    touch
    uv
changedir = {envtmpdir}/project_foo
setenv =
    SKIP = lint
deps =
    build
    pre-commit
    pytest
    pytest-coverage
    pytest-shutil
    pytest-git
    pytest-runner
    pip>=22.1.0
    wheel
commands:
    nbis-admin init .
    git init -b main .
    git add -f .
    uv pip install -e . --no-deps
    project_foo
    project_foo admin config init
    project_foo admin add template -t quarto
    project_foo admin add tool my_tool
    touch src/project_foo/tools/__init__.py
    project_foo admin smk init
    project_foo admin smk add
    git add . _quarto.yml src/project_foo/tools/my_tool.py
    pre-commit
    project_foo
    nbis-admin --version

"""

[tool.ruff]
exclude = []

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyter-book>=1.0.4.post1",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "snakemake>=9.1.9",
    "tox>=4.25.0",
]
